# python_playwright

./: .coverage  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  a_very_detailed_failures.txt  all_failures_detailed.txt  config.py  conftest.py  conftest_old.py  debug.html  detailed_failures.txt  dev_tests.txt  err.txt  err2.txt  final_failures.txt  full_test_output.txt  head_tests.txt  main.py  pyproject.toml  pytest.ini  pytest_output.txt  refactor_script.py  requirements.txt  result.xml  result2.xml  setup_test_data.py
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
Notes/: 00 Automation_PyTest_Notes.ipynb  01 Playwright Python Installation.md  02 Playwright Test Frameworks.md  03 Python Pytest reports.md  04 Page Object Model.md  Framework_Documentation.md  IMP_Branching _Strategy.md  IMP_Branching_Strategy.md  IMP_Linting_Strategy.md  IMP_Playwright_Pytest_Hybrid_Framework.md  IMP_Playwright_Pytest_Hybrid_MAANG_Framework.md  Notes_AllInOne.md
api_clients/: base_api.py  cart_api.py  user_api.py
fixtures/: api.py  auth.py  browser.py  cart_setup.py  user.py  user_setup.py
pages/: base_page.py  category_page.py  change_password_page.py  checkout_page.py  contact_us_page.py  desktop_category_page.py  edit_account_page.py  header_page.py  home_page.py  login_page.py  logout_page.py  my_account_page.py  newsletter_page.py  product_comparison_page.py  product_page.py  registration_page.py  search_results_page.py  shopping_cart_page.py  site_map_page.py  sitemap_page.py  wishlist_page.py
scratch/: debug_locator.py  debug_selector.py  find_stock.py  (+1 more)
(+395 files in other folders)
