[project]
name = "pythonplaywright"
version = "0.1.0"
description = "Python Playwright E2E test automation UI + API project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "allure-pytest>=2.15.3",
    "faker>=40.11.0",
    "openpyxl>=3.1.5",
    "pip>=26.0.1",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.2.0",
    "pytest-playwright>=0.7.2",
]
