[project]
name = "pythonplaywright"
version = "0.2.0"
description = "Python Playwright E2E test automation UI + API hybrid framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "allure-pytest>=2.15.3",
    "faker>=40.11.0",
    "jsonschema>=4.26.0",
    "openpyxl>=3.1.5",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.2.0",
    "pytest-playwright>=0.7.2",
    "pytest-xdist>=3.5.0",
    "pytest-rerunfailures>=14.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  ".venv",
  "__pycache__",
  "playwright-report"
]

[tool.ruff.lint]
select = [
  "E",  # style errors
  "F",  # logical errors
  "W",  # warnings
  "I",  # import sorting
  "B",  # bugbear (important)
  "UP", # modern python upgrades
]

ignore = [
  "E501",  # handled by formatter
  "I001",  # import sorting
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
